--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.3.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~52.0.46",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
@@ -17,6 +19,8 @@
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.9",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "styled-components": "^6.1.17"
   },
